<resources>
    <string name="app_name">Aquarloan</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_mobile_number">Mobile number</string>
    <string name="prompt_verification_code">Verification code</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_submit">Submit</string>
    <string name="prompt_sms_sent">An SMS verification code has been sent to your number.</string>
    <string name="action_verify">Verify</string>
    <string name="action_send">Send</string>
    <string name="action_register">Register Now</string>
    <string name="action_register_short">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="text_login">Do you already have an account?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="action_sign_out">Sign out</string>
    <string name="action_submit">Submit</string>
    <string name="action_save">Save</string>
    <string name="intro_mobile_number_layout">Please enter your mobile number below</string>

    <!--Activity Titles-->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_phone_number_authentication">Sign Up</string>
    <string name="title_activity_password_registration">Input Password</string>
    <string name="title_activity_phone_number_reauthentication">Mobile Authentication</string>

    <!--Fragment Titles-->
    <string name="title_fragment_home">Aquarloan</string>


    <!--Dialog Box-->
    <string name="prompt_dialog_set_password">You need to set your password first to proceed.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
