<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.aquarloan.aquarloan.LoginActivity">

    <!-- Login progress -->

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gradient_button_register"
            android:drawableEnd="@drawable/ic_action_register_mobile"
            android:drawableRight="@drawable/ic_action_register_mobile"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/action_register"
            android:textColor="@android:drawable/screen_background_light"
            android:theme="@style/Theme.AppCompat.NoActionBar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="@drawable/background_login_gradient"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_login" />

        <Button
            android:id="@+id/btnLoginDialogBox"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in" />
    </LinearLayout>

</LinearLayout>
