<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aquarloan.aquarloan.PhoneNumberReauthenticationActivity">

    <LinearLayout
        android:id="@+id/reauthentication_layout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/mobile_number_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <ProgressBar
                android:id="@+id/sendProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/verification_code_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8">

                <EditText
                    android:id="@+id/edVerificationCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:hint="@string/prompt_verification_code"
                    android:inputType="number"
                    android:visibility="visible" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/verifyProgress"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.2"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imgVerifyDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_done_black_24dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnVerify"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_verify"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSend"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_send"
            android:textStyle="bold" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
